modules/gdscript/tests/scripts/analyzer/errors/extend_self_class_top.gd
extends Self

func test():
	print('not ok')
